// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BallScaleRandom> <BallScaleRandom> Mount: enzyme.mount 1`] = `
.css-32mlnk > div,
[data-css-32mlnk] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_1twcfwm 0.7s 0s infinite linear;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1twcfwm 0.7s 0s infinite linear;
}

.css-32mlnk > div:nth-child(2n-1),
[data-css-32mlnk] > div:nth-child(2n-1) {
  animation-delay: -0.35s;
  -webkit-animation-delay: -0.35s;
}

<BallScaleRandom
  loading={true}
>
  <div
    data-css-32mlnk=""
  >
    <div />
    <div />
    <div />
  </div>
</BallScaleRandom>
`;

exports[`<BallScaleRandom> <BallScaleRandom> Render: enzyme.render 1`] = `
.css-32mlnk > div,
[data-css-32mlnk] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_1twcfwm 0.7s 0s infinite linear;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1twcfwm 0.7s 0s infinite linear;
}

.css-32mlnk > div:nth-child(2n-1),
[data-css-32mlnk] > div:nth-child(2n-1) {
  animation-delay: -0.35s;
  -webkit-animation-delay: -0.35s;
}

<div
  data-css-32mlnk=""
>
  <div />
  <div />
  <div />
</div>
`;

exports[`<BallScaleRandom> <BallScaleRandom> Shallow: enzyme.shallow 1`] = `
.css-32mlnk > div,
[data-css-32mlnk] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_1twcfwm 0.7s 0s infinite linear;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1twcfwm 0.7s 0s infinite linear;
}

.css-32mlnk > div:nth-child(2n-1),
[data-css-32mlnk] > div:nth-child(2n-1) {
  animation-delay: -0.35s;
  -webkit-animation-delay: -0.35s;
}

<div
  data-css-32mlnk=""
>
  <div />
  <div />
  <div />
</div>
`;
